--- a/src/sass/grid/_grid-helpers-settings.sass
+++ b/src/sass/grid/_grid-helpers-settings.sass
@@ -1,7 +1,7 @@
 // START Paddings and margins
 
 $indents: true // On off compile
-$medias: '480', '576', '768', '992', '1200'
+$medias: '480px', '576px', '768px', '992px', '1200px'
 // $sizes: (postfix: (from, to)). from = media(320px), to = $medias: last
 $sizes: (xs: (15px, 35px), md: (25px, 55px))
 // $classes: (class, property)
