--- a/src/sass/grid/_grid-settings.sass
+++ b/src/sass/grid/_grid-settings.sass
@@ -9,16 +9,16 @@ $row_class: 'row'
 
 // Cols count and medias (min-width)
 $cols: 12
-$medias: (xs: 576, sm: 768, md: 992, lg: 1200)
+$medias: (xs: 576px, sm: 768px, md: 992px, lg: 1200px)
 
 // $gutter in small displays
 // $gutter_medias media display $gutter_medias:(media min-width, size)
 // Use even number
 $gutter: 16px
-$gutter_medias: (768: 30px)
+$gutter_medias: (768px: 30px)
 
 // Container max-width (min-width, size)
 // Default max-width: 100%
-$container: (768: 90%, 992: 970px, 1200: 1170px)
+$container: (768px: 90%, 992px: 970px, 1200px: 1170px)
 
 @import 'grid.sass'
